fix: remove overflow and border radius settings from widget style

--- a/assets/src/js/admin/reports/widget/style.scss
+++ b/assets/src/js/admin/reports/widget/style.scss
@@ -2,8 +2,6 @@
 	position: relative;
 	height: auto;
 	width: 100%;
-	overflow: hidden;
-	border-radius: 6px;
 }
 
 #givewp_reports_widget {
